cpp/common/test/deviations/invalid_deviations/InvalidDeviationCodeIdentifier.qlref
codingstandards/cpp/deviations/InvalidDeviationCodeIdentifier.ql